// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with more than one expense 1`] = `
<div>
  <h2>
    Viewing
    2
     
    expenses
    , totalling
     
    $94.34
  </h2>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h2>
    Viewing
    1
     
    expense
    , totalling
     
    $94.34
  </h2>
</div>
`;
